deploy/k3s/cluster/task-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-deployment
  namespace: go-layout
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task
  template:
    metadata:
      labels:
        app: task
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - task
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: task
        image: ${REGISTRY}/go-layout-task:${TAG}
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "300m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
